deployments/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: token-gateway-svc
  labels:
    app: token-gateway
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: token-gateway
  type: ClusterIP
