deployments/token-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cxlinks.us
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: coin-gateway-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: token-gateway-svc
                port:
                  number: 8080
